src/tests/testfiles/variable-declarations/21.txt
testfiles/variable-declarations/21.c:2:6: error: size of array ‘a’ has non-integer type (have 'char *')
int a["test"] = {1, 2, 3, 4, 5};
    ^
